--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
 
-<div class="firstparent">
+<!-- <div class="firstparent"> -->
     
         <header>
 
@@ -100,7 +100,7 @@
     
          </div>  
    
-</div>
+<!-- </div> -->
    
 <!-- ///////////////////////////////////////////////////////////////////////////////////// -->
 
