--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Blog de Voyage</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="2style.css">
+    <link rel="stylesheet" href="./propos/propos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -54,8 +55,8 @@
                                          <nav class="nav1">
                                              <ul>
                                                  <li><a href="">Acceuil</a></li>
-                                                 <li><a href="">À propos</a></li>
-                                                 <li><a href="">Voyager</a></li>
+                                                 <li><a href="./propos/propos.html">À propos</a></li>
+                                                 <li><a href="./voyager/voyager.html">Voyager</a></li>
                                                  <li><a href="">Manger</a></li>
                                                  <li><a href="">Se relaxer</a></li>
                                                  <li><a href="">Vidéos</a></li>
