--- a/propos/propos.html
+++ b/propos/propos.html
@@ -15,9 +15,9 @@
                 
                                      <nav class="nav1">
                                          <ul>
-                                             <li><a href="">Acceuil</a></li>
+                                             <li><a href="../index.html">Acceuil</a></li>
                                              <li><a href="">À propos</a></li>
-                                             <li><a href="">Voyager</a></li>
+                                             <li><a href="../voyager/voyager.html">Voyager</a></li>
                                              <li><a href="">Manger</a></li>
                                              <li><a href="">Se relaxer</a></li>
                                              <li><a href="">Vidéos</a></li>
