--- a/propos/propos.html
+++ b/propos/propos.html
@@ -16,11 +16,11 @@
                                      <nav class="nav1">
                                          <ul>
                                              <li><a href="../index.html">Acceuil</a></li>
-                                             <li><a href="">À propos</a></li>
+                                             <li><a href="./propos.html">À propos</a></li>
                                              <li><a href="../voyager/voyager.html">Voyager</a></li>
-                                             <li><a href="">Manger</a></li>
-                                             <li><a href="">Se relaxer</a></li>
-                                             <li><a href="">Vidéos</a></li>
+                                             <li><a href="../manger/manger.html">Manger</a></li>
+                                             <li><a href="../relaxer/relaxer.html">Se relaxer</a></li>
+                                             <li><a href="../videos/videos.html">Vidéos</a></li>
                                          </ul>
                                      </nav>
          
